--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img src="img-1.jpg" alt="profile card">
       <img src="img-2.jpg" alt="">
       <img src="img-3.jpg" alt="">
-      <img src="img-2.PNG" alt="">
+      <img src="img-2.jpg" alt="">
       <img src="img-1.jpg" alt="">
       <img src="img-3.jpg" alt="">
     </div>
